log
Sat Mar 19 19:30:54 UTC 2022: 
 list.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:25: error: ‘List {aka struct List}’ has no member named ‘Head’; did you mean ‘head’?
   list->current = list->Head;
                         ^~~~
                         head
list.c: In function ‘nextList’:
list.c:45:21: error: ‘Node {aka struct Node}’ has no member named ‘Next’; did you mean ‘next’?
   if(list->current->Next != NULL)
                     ^~~~
                     next
Compilation failed
0fe323e
Sat Mar 19 19:31:19 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
46de9ec
Sat Mar 19 19:33:07 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:23: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list->current = list.head;
                       ^
                       ->
Compilation failed
1c57f12
Sat Mar 19 19:33:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc34481
Sat Mar 19 19:33:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
25bc6ee
Sat Mar 19 19:40:20 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20274a7
Sat Mar 19 19:41:57 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
3ef7629
Sat Mar 19 19:42:15 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 15/70
196cc64
Sat Mar 19 19:43:39 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
d148523
Sat Mar 19 19:45:34 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
1d4a821
Sat Mar 19 19:53:42 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9a49537
Sat Mar 19 19:55:54 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
753eccc
Sat Mar 19 19:56:43 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
3afc2f9
Sat Mar 19 19:59:27 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
27b4cbd
Sat Mar 19 20:00:43 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
3d03cb9
Sat Mar 19 20:04:02 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
41646b0
Sat Mar 19 20:05:10 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
84b63ea
Sat Mar 19 20:07:40 UTC 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
27134a0
Sat Mar 19 20:09:20 UTC 2022: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  10|2
total_score: 45/70
b3d3e91
Sat Mar 19 20:18:41 UTC 2022: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushBack’:
list.c:87:35: error: ‘return’ with a value, in function returning void [-Werror]
   if(list->current == NULL)return NULL;
                                   ^~~~
list.c:86:6: note: declared here
 void pushBack(List * list, void * data) {
      ^~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:93:35: error: ‘return’ with a value, in function returning void [-Werror]
   if(list->current == NULL)return NULL;
                                   ^~~~
list.c:92:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
87939a7
Sat Mar 19 20:19:12 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:93:35: error: ‘return’ with a value, in function returning void [-Werror]
   if(list->current == NULL)return NULL;
                                   ^~~~
list.c:92:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5381b2d
Sat Mar 19 20:19:25 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3bb7098
Sat Mar 19 20:21:32 UTC 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
7f02511
Sat Mar 19 20:26:02 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b8651c5
Sat Mar 19 20:29:14 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:96:5: error: expected ‘;’ before ‘list’
     list->current->next = sopaipilla;
     ^~~~
Compilation failed
f6e08d6
Sat Mar 19 20:29:24 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
377f8a9
Sat Mar 19 20:32:19 UTC 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
c0dc9e8
Sat Mar 19 20:32:52 UTC 2022: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
8194127
Sat Mar 19 20:45:58 UTC 2022: 
 list.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
72aa1e3
Sat Mar 19 20:46:10 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f1f28d6
Sat Mar 19 22:30:25 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b153eb7
Sat Mar 19 22:30:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
330f15e
Sat Mar 19 22:39:36 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
768567f
Sun Mar 20 22:24:40 UTC 2022: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
02ac563
Sun Mar 20 22:30:32 UTC 2022: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
c6483d7
Mon Mar 21 00:13:44 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5922054
Mon Mar 21 00:14:52 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0e1f69a
Mon Mar 21 00:18:27 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
91e5f21
Mon Mar 21 00:20:54 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a29f4c
Mon Mar 21 00:21:48 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:140:34: error: ‘Node {aka struct Node}’ has no member named ‘list’
   if (list->head == list->current->list){
                                  ^~
Compilation failed
4e786d4
Mon Mar 21 00:21:58 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
8972a42
Mon Mar 21 00:23:58 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2eb1f2c
Mon Mar 21 00:25:04 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:142:5: error: expected ‘;’ before ‘free’
     free(list->current);
     ^~~~
Compilation failed
42fba50
Mon Mar 21 00:25:14 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
306875f
Mon Mar 21 00:30:57 UTC 2022: 
 list.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  11|1
total_score: 55/70
07d098a
Mon Mar 21 00:31:40 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9b9e3b0
Mon Mar 21 00:37:25 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
6cfec87
Mon Mar 21 00:38:19 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
4b8467c
Mon Mar 21 00:43:55 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
1a03309
Mon Mar 21 00:45:25 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
955ee67
Mon Mar 21 00:45:34 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:134:34: error: expected ‘)’ before ‘{’ token
   if (list->current->prev == NULL{
                                  ^
list.c:151:1: error: expected expression before ‘}’ token
 }
 ^
list.c:151:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
9dba48c
Mon Mar 21 00:45:43 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
edc8938
Mon Mar 21 00:46:28 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
887530a
Mon Mar 21 00:48:59 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
9659a30
Mon Mar 21 00:59:11 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b2b655f
Mon Mar 21 00:59:40 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
4601b16
